# privacy-pools-v1

./: .env.example  .gitignore  README.md  hardhat.config.js  package.json
.github/workflows/: build.yml
circomlib/circuits/: bitify.circom  poseidon.circom  poseidon_constants.circom
circuits/: merkleTreeUpdater.circom  proofOfInnocence.circom  transaction1.circom
contracts/: ERC20PrivacyPool.sol  ETHPrivacyPool.sol  MerkleTreeWithHistory.sol  PrivacyPool.sol  TornadoPool.sol  Verifier1.sol  Verifier16.sol
contracts/Mocks/: WETH.sol
contracts/interfaces/: IVerifier.sol
membership-proof/: README.md  package.json
membership-proof/cbor-nova/: Cargo.toml
membership-proof/cbor-nova/src/: main.rs
membership-proof/circuits/: keypair.circom  merkleProof.circom  merkleTree.circom  merkleTreeUpdater.circom  proofOfInnocence.circom
membership-proof/scripts/: buildCircuit.sh
membership-proof/test/: circuit.test.js  input.json  inputs.json
membership-proof/wasm/: Cargo.toml  file.js
membership-proof/wasm-nova/: Cargo.toml
membership-proof/wasm-nova/examples/: cbor.rs
membership-proof/wasm-nova/output/: inputs.json  proofOfInnocence.r1cs  start.json
membership-proof/wasm-nova/output/proofOfInnocence_js/: generate_witness.js  proofOfInnocence.wasm  witness_calculator.js
membership-proof/wasm-nova/src/: a.rs  cbor.rs  lib.rs  main.rs  wasm.rs
membership-proof/wasm-nova/tests/: lib.rs
membership-proof/wasm/examples/: cbor.rs
membership-proof/wasm/output/: start.json
scripts/: buildCircuit.sh  buildCircuit_prod.sh  buildPoi.sh  calculateIPFSHash.js  deployETHPrivacyPool.js  deployPrivacyPool.js  unzipCircuits.sh
src/: cli.js  events.js  index.js  poi.js  prover.js  txRecord.js  utils.js  utxo.js
test/: erc20.full.test.js  eth.full.test.js  full.test.js  poi.test.js  tree.test.js  utils.js
(+1 files in other folders)
