[package]
name = "cbor-nova"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nova-scotia = "0.5.0"
nova-snark = {git = "https://github.com/chainwayxyz/Nova", branch = "dev"}
num-bigint = { version = "0.4", features = ["serde", "rand"] }
num-traits = "0.2.15"
serde = "1.0"
serde_json = "1.0.85"
serde_cbor = "0.11"
pasta_curves = "0.5"

[patch.crates-io]
nova-snark = {git = "https://github.com/chainwayxyz/Nova", branch = "dev"}
