[package]
name = "wasm-nova"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# nova-scotia = "0.5.0"
nova-scotia = {git = "https://github.com/nalinbhardwaj/Nova-Scotia"}
nova-snark = {git = "https://github.com/chainwayxyz/Nova", branch = "hakan/arb"}
num-bigint = { version = "0.4", features = ["serde", "rand"] }
num-traits = "0.2.15"
serde = "1.0"
serde_json = "1.0.85"
serde_cbor = "0.11"
pasta_curves = "0.5"

[patch.crates-io]
nova-snark = {git = "https://github.com/chainwayxyz/Nova", branch = "hakan/arb"}

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { version = "0.2", features = ["js"]}
wasm-bindgen = { version = "0.2.81", features = ["serde-serialize"]}
console_error_panic_hook = "0.1.7"
rayon = "1.5"
wasm-bindgen-rayon = { version = "1.0"}
web-sys = { version = "0.3", features = ["Request", "Window", "Response"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.37"
web-sys = { version = "0.3", features = ["Performance"] }
